--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -1,6 +1,7 @@
 .navbar {
-    background-image: url('file:///C:/Users/hp15-AY/Desktop/ReactFolders/tech_store/public/images/nav.png');
+    background-image: url('../images/nav.png');
     max-width: 100%;
     background-size: contain;
     height: 12rem;
+    color: rgb(0, 104, 117);
 }
